FIX: spacing styling in the nav bar

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -102,7 +102,7 @@ a {
 #main_content {
   margin-left: 200px;
   #header {
-    padding: 1.2em 1.5em;
+    padding: 1.2em 2em;
     border-bottom: 1px solid #b8e2fe;
     background: #529FCD;
     color: #FFF;
